# fastapi-example

./: README.org  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2ca2e96d14e8_add_movies_table.py
api/: __init__.py  app.py
api/application/dtos/: movie.py
api/application/repositories/: movie_repository.py
api/domain/exceptions/: not_found_exception.py
api/factories/: database.py  repositories.py
api/http/exception_handlers/: __init__.py  not_found_exception_handler.py
api/http/routes/: movie.py
api/http/utils/: __init__.py
api/infra/sqlalchemy/models/: __init__.py  base.py  movie_model.py
api/infra/sqlalchemy/repositories/: sqlalchemy_movie_repository.py  utils.py
api/routes/: movie.py  utils.py
src/: __init__.py  app.py  config.py
src/application/dtos/: __init__.py  movie.py  pagination.py
src/application/repositories/: movie_repository.py
src/domain/entities/: movie.py
src/domain/exceptions/: __init__.py
src/factories/: database.py
src/infra/sqlalchemy/models/: base.py  movie_model.py
src/infra/sqlalchemy/repositories/: sqlalchemy_movie_repository.py  utils.py
src/routes/: utils.py
tests/mocks/: __init__.py  mocked_movie_repository.py
tests/routes/movie/: test_create_movie.py  test_delete_movie.py  test_get_movie_by_id.py  test_list_movie.py  test_patch_movie.py
