[tool.poetry]
name = "rotina-compartilhamento-fastapi"
version = "0.1.0"
description = ""
authors = ["Luís Simas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
