[tool.poetry]
name = "rotina-compartilhamento-fastapi"
version = "0.1.0"
description = ""
authors = ["Luís Simas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
alembic = "^1.11.2"
psycopg2 = "^2.9.7"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
taskipy = "^1.12.0"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src:run"
dev = "src:dev"

[tool.taskipy.tasks]
test = "pytest"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
